# DisplayThings

./: .gitignore  .gitmodules  CMakeLists.txt  DisplayThings-experiment.vcxproj  OpenGL.sln  OpenGL.vcxproj  OpenGL.vcxproj.filters  README.md  README.txt  Source.cpp  main.cpp  window.cpp
DisplayThings/: CMakeLists.txt
DisplayThings/src/: Main.cpp  premake5.lua
Window/: OpenGLWindow.cpp  SceneCamera.hpp  ShaderLoader.cpp
Window/Shaders/: basic.frag  basic.vert
lib/: glad.c  glfw3.lib
src/: main.cpp
